INE5426/src/compiler/gci/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     new_for_loop_label -> <empty>
Rule 3     PROGRAM -> STATEMENT
Rule 4     PROGRAM -> FUNCLIST
Rule 5     PROGRAM -> empty
Rule 6     FUNCLIST -> FUNCDEF FUNCLISTAUX
Rule 7     FUNCLISTAUX -> FUNCLIST
Rule 8     FUNCLISTAUX -> empty
Rule 9     FUNCDEF -> DEF IDENT LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
Rule 10    PARAMLIST -> DATATYPE IDENT PARAMLISTAUX
Rule 11    PARAMLIST -> empty
Rule 12    PARAMLISTAUX -> COMMA PARAMLIST
Rule 13    PARAMLISTAUX -> empty
Rule 14    DATATYPE -> INT_KEYWORD
Rule 15    DATATYPE -> FLOAT_KEYWORD
Rule 16    DATATYPE -> STRING_KEYWORD
Rule 17    STATEMENT -> VARDECL SEMICOLON
Rule 18    STATEMENT -> ATRIBSTAT SEMICOLON
Rule 19    STATEMENT -> PRINTSTAT SEMICOLON
Rule 20    STATEMENT -> READSTAT SEMICOLON
Rule 21    STATEMENT -> RETURNSTAT SEMICOLON
Rule 22    STATEMENT -> IFSTAT
Rule 23    STATEMENT -> FORSTAT
Rule 24    STATEMENT -> LBRACKETS STATELIST RBRACKETS
Rule 25    STATEMENT -> BREAK SEMICOLON
Rule 26    STATEMENT -> SEMICOLON
Rule 27    VARDECL -> DATATYPE IDENT OPT_VECTOR
Rule 28    OPT_VECTOR -> LSQBRACKETS INT_CONSTANT RSQBRACKETS OPT_VECTOR
Rule 29    OPT_VECTOR -> empty
Rule 30    ATRIBSTAT -> LVALUE ATTRIBUTION ATRIB_RIGHT
Rule 31    ATRIB_RIGHT -> FUNCCALL_OR_EXPRESSION
Rule 32    ATRIB_RIGHT -> ALLOCEXPRESSION
Rule 33    FUNCCALL_OR_EXPRESSION -> MINUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 34    FUNCCALL_OR_EXPRESSION -> PLUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 35    FUNCCALL_OR_EXPRESSION -> INT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 36    FUNCCALL_OR_EXPRESSION -> STRING_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 37    FUNCCALL_OR_EXPRESSION -> FLOAT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 38    FUNCCALL_OR_EXPRESSION -> NULL REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 39    FUNCCALL_OR_EXPRESSION -> LPAREN NUMEXPRESSION RPAREN REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 40    FUNCCALL_OR_EXPRESSION -> IDENT FOLLOW_IDENT
Rule 41    FOLLOW_IDENT -> OPT_ALLOC_NUMEXP REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 42    FOLLOW_IDENT -> LPAREN PARAMLISTCALL RPAREN
Rule 43    PARAMLISTCALL -> IDENT PARAMLISTCALLAUX
Rule 44    PARAMLISTCALL -> empty
Rule 45    PARAMLISTCALLAUX -> COMMA PARAMLISTCALL
Rule 46    PARAMLISTCALLAUX -> empty
Rule 47    PRINTSTAT -> PRINT EXPRESSION
Rule 48    READSTAT -> READ LVALUE
Rule 49    RETURNSTAT -> RETURN
Rule 50    IFSTAT -> IF LPAREN EXPRESSION RPAREN LBRACKETS STATELIST RBRACKETS OPT_ELSE
Rule 51    OPT_ELSE -> ELSE LBRACKETS STATELIST RBRACKETS
Rule 52    OPT_ELSE -> empty
Rule 53    FORSTAT -> new_for_loop_label FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN LBRACKETS STATELIST RBRACKETS
Rule 54    STATELIST -> STATEMENT OPT_STATELIST
Rule 55    OPT_STATELIST -> STATELIST
Rule 56    OPT_STATELIST -> empty
Rule 57    ALLOCEXPRESSION -> NEW DATATYPE LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 58    OPT_ALLOC_NUMEXP -> LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 59    OPT_ALLOC_NUMEXP -> empty
Rule 60    EXPRESSION -> NUMEXPRESSION OPT_REL_OP_NUM_EXPR
Rule 61    OPT_REL_OP_NUM_EXPR -> REL_OP NUMEXPRESSION
Rule 62    OPT_REL_OP_NUM_EXPR -> empty
Rule 63    REL_OP -> LOWER_THAN
Rule 64    REL_OP -> GREATER_THAN
Rule 65    REL_OP -> LOWER_OR_EQUALS_THAN
Rule 66    REL_OP -> GREATER_OR_EQUALS_THAN
Rule 67    REL_OP -> EQ_COMPARISON
Rule 68    REL_OP -> NEQ_COMPARISON
Rule 69    NUMEXPRESSION -> TERM REC_PLUS_MINUS_TERM
Rule 70    REC_PLUS_MINUS_TERM -> PLUS_OR_MINUS TERM REC_PLUS_MINUS_TERM
Rule 71    REC_PLUS_MINUS_TERM -> empty
Rule 72    PLUS_OR_MINUS -> PLUS
Rule 73    PLUS_OR_MINUS -> MINUS
Rule 74    UNARYEXPR_OP -> TIMES
Rule 75    UNARYEXPR_OP -> MODULE
Rule 76    UNARYEXPR_OP -> DIVIDE
Rule 77    TERM -> UNARYEXPR REC_UNARYEXPR
Rule 78    REC_UNARYEXPR -> UNARYEXPR_OP TERM
Rule 79    REC_UNARYEXPR -> empty
Rule 80    UNARYEXPR -> PLUS_OR_MINUS FACTOR
Rule 81    UNARYEXPR -> FACTOR
Rule 82    FACTOR -> INT_CONSTANT
Rule 83    FACTOR -> FLOAT_CONSTANT
Rule 84    FACTOR -> STRING_CONSTANT
Rule 85    FACTOR -> NULL
Rule 86    FACTOR -> LVALUE
Rule 87    FACTOR -> LPAREN NUMEXPRESSION RPAREN
Rule 88    LVALUE -> IDENT OPT_ALLOC_NUMEXP

Terminals, with rules where they appear

ATTRIBUTION          : 30
BREAK                : 25
COMMA                : 12 45
DEF                  : 9
DIVIDE               : 76
ELSE                 : 51
EQ_COMPARISON        : 67
FLOAT_CONSTANT       : 37 83
FLOAT_KEYWORD        : 15
FOR                  : 53
GREATER_OR_EQUALS_THAN : 66
GREATER_THAN         : 64
IDENT                : 9 10 27 40 43 88
IF                   : 50
INT_CONSTANT         : 28 35 82
INT_KEYWORD          : 14
LBRACKETS            : 9 24 50 51 53
LOWER_OR_EQUALS_THAN : 65
LOWER_THAN           : 63
LPAREN               : 9 39 42 50 53 87
LSQBRACKETS          : 28 57 58
MINUS                : 33 73
MODULE               : 75
NEQ_COMPARISON       : 68
NEW                  : 57
NULL                 : 38 85
PLUS                 : 34 72
PRINT                : 47
RBRACKETS            : 9 24 50 51 53
READ                 : 48
RETURN               : 49
RPAREN               : 9 39 42 50 53 87
RSQBRACKETS          : 28 57 58
SEMICOLON            : 17 18 19 20 21 25 26 53 53
STRING_CONSTANT      : 36 84
STRING_KEYWORD       : 16
TIMES                : 74
error                : 

Nonterminals, with rules where they appear

ALLOCEXPRESSION      : 32
ATRIBSTAT            : 18 53 53
ATRIB_RIGHT          : 30
DATATYPE             : 10 27 57
EXPRESSION           : 47 50 53
FACTOR               : 33 34 80 81
FOLLOW_IDENT         : 40
FORSTAT              : 23
FUNCCALL_OR_EXPRESSION : 31
FUNCDEF              : 6
FUNCLIST             : 4 7
FUNCLISTAUX          : 6
IFSTAT               : 22
LVALUE               : 30 48 86
NUMEXPRESSION        : 39 57 58 60 61 87
OPT_ALLOC_NUMEXP     : 41 57 58 88
OPT_ELSE             : 50
OPT_REL_OP_NUM_EXPR  : 33 34 35 36 37 38 39 41 60
OPT_STATELIST        : 54
OPT_VECTOR           : 27 28
PARAMLIST            : 9 12
PARAMLISTAUX         : 10
PARAMLISTCALL        : 42 45
PARAMLISTCALLAUX     : 43
PLUS_OR_MINUS        : 70 80
PRINTSTAT            : 19
PROGRAM              : 0
READSTAT             : 20
REC_PLUS_MINUS_TERM  : 33 34 35 36 37 38 39 41 69 70
REC_UNARYEXPR        : 33 34 35 36 37 38 39 41 77
REL_OP               : 61
RETURNSTAT           : 21
STATELIST            : 9 24 50 51 53 55
STATEMENT            : 3 54
TERM                 : 69 70 78
UNARYEXPR            : 77
UNARYEXPR_OP         : 78
VARDECL              : 17
empty                : 5 8 11 13 29 44 46 52 56 59 62 71 79
new_for_loop_label   : 53

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (3) PROGRAM -> . STATEMENT
    (4) PROGRAM -> . FUNCLIST
    (5) PROGRAM -> . empty
    (17) STATEMENT -> . VARDECL SEMICOLON
    (18) STATEMENT -> . ATRIBSTAT SEMICOLON
    (19) STATEMENT -> . PRINTSTAT SEMICOLON
    (20) STATEMENT -> . READSTAT SEMICOLON
    (21) STATEMENT -> . RETURNSTAT SEMICOLON
    (22) STATEMENT -> . IFSTAT
    (23) STATEMENT -> . FORSTAT
    (24) STATEMENT -> . LBRACKETS STATELIST RBRACKETS
    (25) STATEMENT -> . BREAK SEMICOLON
    (26) STATEMENT -> . SEMICOLON
    (6) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (1) empty -> .
    (27) VARDECL -> . DATATYPE IDENT OPT_VECTOR
    (30) ATRIBSTAT -> . LVALUE ATTRIBUTION ATRIB_RIGHT
    (47) PRINTSTAT -> . PRINT EXPRESSION
    (48) READSTAT -> . READ LVALUE
    (49) RETURNSTAT -> . RETURN
    (50) IFSTAT -> . IF LPAREN EXPRESSION RPAREN LBRACKETS STATELIST RBRACKETS OPT_ELSE
    (53) FORSTAT -> . new_for_loop_label FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN LBRACKETS STATELIST RBRACKETS
    (9) FUNCDEF -> . DEF IDENT LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
    (14) DATATYPE -> . INT_KEYWORD
    (15) DATATYPE -> . FLOAT_KEYWORD
    (16) DATATYPE -> . STRING_KEYWORD
    (88) LVALUE -> . IDENT OPT_ALLOC_NUMEXP
    (2) new_for_loop_label -> .

    LBRACKETS       shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    $end            reduce using rule 1 (empty -> .)
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    DEF             shift and go to state 24
    INT_KEYWORD     shift and go to state 25
    FLOAT_KEYWORD   shift and go to state 26
    STRING_KEYWORD  shift and go to state 27
    IDENT           shift and go to state 17
    FOR             reduce using rule 2 (new_for_loop_label -> .)

    PROGRAM                        shift and go to state 1
    STATEMENT                      shift and go to state 2
    FUNCLIST                       shift and go to state 3
    empty                          shift and go to state 4
    VARDECL                        shift and go to state 5
    ATRIBSTAT                      shift and go to state 7
    PRINTSTAT                      shift and go to state 8
    READSTAT                       shift and go to state 9
    RETURNSTAT                     shift and go to state 10
    IFSTAT                         shift and go to state 11
    FORSTAT                        shift and go to state 12
    FUNCDEF                        shift and go to state 15
    DATATYPE                       shift and go to state 16
    LVALUE                         shift and go to state 18
    new_for_loop_label             shift and go to state 23

state 1

    (0) S' -> PROGRAM .



state 2

    (3) PROGRAM -> STATEMENT .

    $end            reduce using rule 3 (PROGRAM -> STATEMENT .)


state 3

    (4) PROGRAM -> FUNCLIST .

    $end            reduce using rule 4 (PROGRAM -> FUNCLIST .)


state 4

    (5) PROGRAM -> empty .

    $end            reduce using rule 5 (PROGRAM -> empty .)


state 5

    (17) STATEMENT -> VARDECL . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (26) STATEMENT -> SEMICOLON .

    $end            reduce using rule 26 (STATEMENT -> SEMICOLON .)
    LBRACKETS       reduce using rule 26 (STATEMENT -> SEMICOLON .)
    BREAK           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    SEMICOLON       reduce using rule 26 (STATEMENT -> SEMICOLON .)
    PRINT           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    READ            reduce using rule 26 (STATEMENT -> SEMICOLON .)
    RETURN          reduce using rule 26 (STATEMENT -> SEMICOLON .)
    IF              reduce using rule 26 (STATEMENT -> SEMICOLON .)
    INT_KEYWORD     reduce using rule 26 (STATEMENT -> SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 26 (STATEMENT -> SEMICOLON .)
    STRING_KEYWORD  reduce using rule 26 (STATEMENT -> SEMICOLON .)
    IDENT           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    FOR             reduce using rule 26 (STATEMENT -> SEMICOLON .)
    RBRACKETS       reduce using rule 26 (STATEMENT -> SEMICOLON .)


state 7

    (18) STATEMENT -> ATRIBSTAT . SEMICOLON

    SEMICOLON       shift and go to state 29


state 8

    (19) STATEMENT -> PRINTSTAT . SEMICOLON

    SEMICOLON       shift and go to state 30


state 9

    (20) STATEMENT -> READSTAT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (21) STATEMENT -> RETURNSTAT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (22) STATEMENT -> IFSTAT .

    $end            reduce using rule 22 (STATEMENT -> IFSTAT .)
    LBRACKETS       reduce using rule 22 (STATEMENT -> IFSTAT .)
    BREAK           reduce using rule 22 (STATEMENT -> IFSTAT .)
    SEMICOLON       reduce using rule 22 (STATEMENT -> IFSTAT .)
    PRINT           reduce using rule 22 (STATEMENT -> IFSTAT .)
    READ            reduce using rule 22 (STATEMENT -> IFSTAT .)
    RETURN          reduce using rule 22 (STATEMENT -> IFSTAT .)
    IF              reduce using rule 22 (STATEMENT -> IFSTAT .)
    INT_KEYWORD     reduce using rule 22 (STATEMENT -> IFSTAT .)
    FLOAT_KEYWORD   reduce using rule 22 (STATEMENT -> IFSTAT .)
    STRING_KEYWORD  reduce using rule 22 (STATEMENT -> IFSTAT .)
    IDENT           reduce using rule 22 (STATEMENT -> IFSTAT .)
    FOR             reduce using rule 22 (STATEMENT -> IFSTAT .)
    RBRACKETS       reduce using rule 22 (STATEMENT -> IFSTAT .)


state 12

    (23) STATEMENT -> FORSTAT .

    $end            reduce using rule 23 (STATEMENT -> FORSTAT .)
    LBRACKETS       reduce using rule 23 (STATEMENT -> FORSTAT .)
    BREAK           reduce using rule 23 (STATEMENT -> FORSTAT .)
    SEMICOLON       reduce using rule 23 (STATEMENT -> FORSTAT .)
    PRINT           reduce using rule 23 (STATEMENT -> FORSTAT .)
    READ            reduce using rule 23 (STATEMENT -> FORSTAT .)
    RETURN          reduce using rule 23 (STATEMENT -> FORSTAT .)
    IF              reduce using rule 23 (STATEMENT -> FORSTAT .)
    INT_KEYWORD     reduce using rule 23 (STATEMENT -> FORSTAT .)
    FLOAT_KEYWORD   reduce using rule 23 (STATEMENT -> FORSTAT .)
    STRING_KEYWORD  reduce using rule 23 (STATEMENT -> FORSTAT .)
    IDENT           reduce using rule 23 (STATEMENT -> FORSTAT .)
    FOR             reduce using rule 23 (STATEMENT -> FORSTAT .)
    RBRACKETS       reduce using rule 23 (STATEMENT -> FORSTAT .)


state 13

    (24) STATEMENT -> LBRACKETS . STATELIST RBRACKETS
    (54) STATELIST -> . STATEMENT OPT_STATELIST
    (17) STATEMENT -> . VARDECL SEMICOLON
    (18) STATEMENT -> . ATRIBSTAT SEMICOLON
    (19) STATEMENT -> . PRINTSTAT SEMICOLON
    (20) STATEMENT -> . READSTAT SEMICOLON
    (21) STATEMENT -> . RETURNSTAT SEMICOLON
    (22) STATEMENT -> . IFSTAT
    (23) STATEMENT -> . FORSTAT
    (24) STATEMENT -> . LBRACKETS STATELIST RBRACKETS
    (25) STATEMENT -> . BREAK SEMICOLON
    (26) STATEMENT -> . SEMICOLON
    (27) VARDECL -> . DATATYPE IDENT OPT_VECTOR
    (30) ATRIBSTAT -> . LVALUE ATTRIBUTION ATRIB_RIGHT
    (47) PRINTSTAT -> . PRINT EXPRESSION
    (48) READSTAT -> . READ LVALUE
    (49) RETURNSTAT -> . RETURN
    (50) IFSTAT -> . IF LPAREN EXPRESSION RPAREN LBRACKETS STATELIST RBRACKETS OPT_ELSE
    (53) FORSTAT -> . new_for_loop_label FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN LBRACKETS STATELIST RBRACKETS
    (14) DATATYPE -> . INT_KEYWORD
    (15) DATATYPE -> . FLOAT_KEYWORD
    (16) DATATYPE -> . STRING_KEYWORD
    (88) LVALUE -> . IDENT OPT_ALLOC_NUMEXP
    (2) new_for_loop_label -> .

    LBRACKETS       shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    INT_KEYWORD     shift and go to state 25
    FLOAT_KEYWORD   shift and go to state 26
    STRING_KEYWORD  shift and go to state 27
    IDENT           shift and go to state 17
    FOR             reduce using rule 2 (new_for_loop_label -> .)

    STATELIST                      shift and go to state 33
    STATEMENT                      shift and go to state 34
    VARDECL                        shift and go to state 5
    ATRIBSTAT                      shift and go to state 7
    PRINTSTAT                      shift and go to state 8
    READSTAT                       shift and go to state 9
    RETURNSTAT                     shift and go to state 10
    IFSTAT                         shift and go to state 11
    FORSTAT                        shift and go to state 12
    DATATYPE                       shift and go to state 16
    LVALUE                         shift and go to state 18
    new_for_loop_label             shift and go to state 23

state 14

    (25) STATEMENT -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 15

    (6) FUNCLIST -> FUNCDEF . FUNCLISTAUX
    (7) FUNCLISTAUX -> . FUNCLIST
    (8) FUNCLISTAUX -> . empty
    (6) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (1) empty -> .
    (9) FUNCDEF -> . DEF IDENT LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS

    $end            reduce using rule 1 (empty -> .)
    DEF             shift and go to state 24

    FUNCDEF                        shift and go to state 15
    FUNCLISTAUX                    shift and go to state 36
    FUNCLIST                       shift and go to state 37
    empty                          shift and go to state 38

state 16

    (27) VARDECL -> DATATYPE . IDENT OPT_VECTOR

    IDENT           shift and go to state 39


state 17

    (88) LVALUE -> IDENT . OPT_ALLOC_NUMEXP
    (58) OPT_ALLOC_NUMEXP -> . LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
    (59) OPT_ALLOC_NUMEXP -> . empty
    (1) empty -> .

    LSQBRACKETS     shift and go to state 41
    ATTRIBUTION     reduce using rule 1 (empty -> .)
    TIMES           reduce using rule 1 (empty -> .)
    MODULE          reduce using rule 1 (empty -> .)
    DIVIDE          reduce using rule 1 (empty -> .)
    PLUS            reduce using rule 1 (empty -> .)
    MINUS           reduce using rule 1 (empty -> .)
    LOWER_THAN      reduce using rule 1 (empty -> .)
    GREATER_THAN    reduce using rule 1 (empty -> .)
    LOWER_OR_EQUALS_THAN reduce using rule 1 (empty -> .)
    GREATER_OR_EQUALS_THAN reduce using rule 1 (empty -> .)
    EQ_COMPARISON   reduce using rule 1 (empty -> .)
    NEQ_COMPARISON  reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)
    RSQBRACKETS     reduce using rule 1 (empty -> .)
    RPAREN          reduce using rule 1 (empty -> .)

    OPT_ALLOC_NUMEXP               shift and go to state 40
    empty                          shift and go to state 42

state 18

    (30) ATRIBSTAT -> LVALUE . ATTRIBUTION ATRIB_RIGHT

    ATTRIBUTION     shift and go to state 43


state 19

    (47) PRINTSTAT -> PRINT . EXPRESSION
    (60) EXPRESSION -> . NUMEXPRESSION OPT_REL_OP_NUM_EXPR
    (69) NUMEXPRESSION -> . TERM REC_PLUS_MINUS_TERM
    (77) TERM -> . UNARYEXPR REC_UNARYEXPR
    (80) UNARYEXPR -> . PLUS_OR_MINUS FACTOR
    (81) UNARYEXPR -> . FACTOR
    (72) PLUS_OR_MINUS -> . PLUS
    (73) PLUS_OR_MINUS -> . MINUS
    (82) FACTOR -> . INT_CONSTANT
    (83) FACTOR -> . FLOAT_CONSTANT
    (84) FACTOR -> . STRING_CONSTANT
    (85) FACTOR -> . NULL
    (86) FACTOR -> . LVALUE
    (87) FACTOR -> . LPAREN NUMEXPRESSION RPAREN
    (88) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    INT_CONSTANT    shift and go to state 52
    FLOAT_CONSTANT  shift and go to state 53
    STRING_CONSTANT shift and go to state 54
    NULL            shift and go to state 55
    LPAREN          shift and go to state 57
    IDENT           shift and go to state 17

    EXPRESSION                     shift and go to state 44
    NUMEXPRESSION                  shift and go to state 45
    TERM                           shift and go to state 46
    UNARYEXPR                      shift and go to state 47
    PLUS_OR_MINUS                  shift and go to state 48
    FACTOR                         shift and go to state 49
    LVALUE                         shift and go to state 56

state 20

    (48) READSTAT -> READ . LVALUE
    (88) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    IDENT           shift and go to state 17

    LVALUE                         shift and go to state 58

state 21

    (49) RETURNSTAT -> RETURN .

    SEMICOLON       reduce using rule 49 (RETURNSTAT -> RETURN .)


state 22

    (50) IFSTAT -> IF . LPAREN EXPRESSION RPAREN LBRACKETS STATELIST RBRACKETS OPT_ELSE

    LPAREN          shift and go to state 59


state 23

    (53) FORSTAT -> new_for_loop_label . FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN LBRACKETS STATELIST RBRACKETS

    FOR             shift and go to state 60


state 24

    (9) FUNCDEF -> DEF . IDENT LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS

    IDENT           shift and go to state 61


state 25

    (14) DATATYPE -> INT_KEYWORD .

    IDENT           reduce using rule 14 (DATATYPE -> INT_KEYWORD .)
    LSQBRACKETS     reduce using rule 14 (DATATYPE -> INT_KEYWORD .)


state 26

    (15) DATATYPE -> FLOAT_KEYWORD .

    IDENT           reduce using rule 15 (DATATYPE -> FLOAT_KEYWORD .)
    LSQBRACKETS     reduce using rule 15 (DATATYPE -> FLOAT_KEYWORD .)


state 27

    (16) DATATYPE -> STRING_KEYWORD .

    IDENT           reduce using rule 16 (DATATYPE -> STRING_KEYWORD .)
    LSQBRACKETS     reduce using rule 16 (DATATYPE -> STRING_KEYWORD .)


state 28

    (17) STATEMENT -> VARDECL SEMICOLON .

    $end            reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    LBRACKETS       reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    BREAK           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    SEMICOLON       reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    PRINT           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    READ            reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    RETURN          reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    IF              reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    INT_KEYWORD     reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    STRING_KEYWORD  reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    IDENT           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    FOR             reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    RBRACKETS       reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)


state 29

    (18) STATEMENT -> ATRIBSTAT SEMICOLON .

    $end            reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    BREAK           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    PRINT           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    READ            reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RETURN          reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IF              reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IDENT           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FOR             reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)


state 30

    (19) STATEMENT -> PRINTSTAT SEMICOLON .

    $end            reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    BREAK           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    PRINT           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    READ            reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RETURN          reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IF              reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IDENT           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FOR             reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)


state 31

    (20) STATEMENT -> READSTAT SEMICOLON .

    $end            reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    BREAK           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    PRINT           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    READ            reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    RETURN          reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    IF              reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    IDENT           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    FOR             reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)


state 32

    (21) STATEMENT -> RETURNSTAT SEMICOLON .

    $end            reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    BREAK           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    PRINT           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    READ            reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RETURN          reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IF              reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IDENT           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FOR             reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)


state 33

    (24) STATEMENT -> LBRACKETS STATELIST . RBRACKETS

    RBRACKETS       shift and go to state 62


state 34
